# RDM

./: Cargo.toml  README.md  SESSION_NOTE.md  build-plugins.sh  buildall.sh  install.sh  lwctest.sh  progress.md  uninstall.sh
Code/User/globalStorage/jaydipchangani.copilot-tracker/: copilotTracker.json  userId.txt
config/: labwc-rc.xml  org.freedesktop.Notifications.service  rdm-editor.desktop  rdm-launcher.desktop  rdm-noterm.desktop  rdm-settings.desktop  rdm.desktop  rdm.toml  session.toml
crates/rdm-common/: Cargo.toml  build.rs
crates/rdm-common/src/: config.rs  desktop_apps.rs  display.rs  lib.rs  theme.rs
crates/rdm-common/themes/: style.css
crates/rdm-common/themes/catppuccin-mocha/: colors.css  overrides.css  style.css  theme.toml
crates/rdm-common/themes/dracula/: colors.css  overrides.css  style.css  theme.toml
crates/rdm-common/themes/gruvbox-dark/: colors.css  overrides.css  style.css  theme.toml
crates/rdm-common/themes/macos/: colors.css  overrides.css  style.css  theme.toml
crates/rdm-common/themes/nord/: colors.css  overrides.css  style.css  theme.toml
crates/rdm-common/themes/solarized-dark/: colors.css  overrides.css  style.css  theme.toml
crates/rdm-common/themes/tokyo-night/: colors.css  common.css  launcher.css  overrides.css  panel.css  settings.css  style.css  theme.toml  watermark.css
crates/rdm-common/themes/ubuntu/: colors.css  overrides.css  style.css  theme.toml
crates/rdm-common/themes/windows-10/: colors.css  overrides.css  style.css  theme.toml
crates/rdm-dock/: Cargo.toml
crates/rdm-dock/src/: dock.rs  main.rs  toplevel.rs
crates/rdm-editor/: Cargo.toml
crates/rdm-editor/src/: ai_panel.rs  app.rs  config.rs  diff_tool.rs  find.rs  goto.rs  help.rs  main.rs  menubar.rs  notebook.rs  output.rs  preview.rs  runner.rs  schemes.rs  session.rs  sidebar.rs  statusbar.rs  tab.rs
crates/rdm-launcher/: Cargo.toml
crates/rdm-launcher/src/: desktop_apps.rs  main.rs
crates/rdm-noterm/: Cargo.toml
crates/rdm-noterm/src/: main.rs
crates/rdm-notify/: Cargo.toml
crates/rdm-notify/src/: dbus.rs  main.rs
crates/rdm-panel/: Cargo.toml
crates/rdm-panel-api/: Cargo.toml
crates/rdm-panel-api/src/: lib.rs
crates/rdm-panel-clipboard/: Cargo.toml
crates/rdm-panel-clipboard/src/: lib.rs
crates/rdm-panel-hello/: Cargo.toml
crates/rdm-panel-hello/src/: lib.rs
crates/rdm-panel-swaylock/: Cargo.toml
crates/rdm-panel-swaylock/src/: lib.rs
crates/rdm-panel-sysmon/: Cargo.toml
crates/rdm-panel-sysmon/src/: lib.rs
crates/rdm-panel/src/: clock.rs  dbusmenu.rs  main.rs  plugin_loader.rs  process_popup.rs  sni.rs  taskbar.rs  toplevel.rs  tray.rs  wifi.rs
crates/rdm-session/: Cargo.toml
crates/rdm-session/src/: main.rs
crates/rdm-settings/: Cargo.toml
crates/rdm-settings/src/: main.rs
crates/rdm-snap/: Cargo.toml
crates/rdm-snap/src/: main.rs
crates/rdm-watermark/: Cargo.toml
crates/rdm-watermark/src/: main.rs
plugins/: README_INSTALL.txt  plugin-dev.txt  rdm-plugin-install.desktop  rdm-plugin-install.sh
scripts/: rdm-idle-inhibit  rdm-install  rdm-reload  rdm-screenshot  rdm-start  rdm-volume
