[workspace]
members = [
    "crates/rdm-panel",
    "crates/rdm-launcher",
    "crates/rdm-snap",
    "crates/rdm-session",
    "crates/rdm-common",
    "crates/rdm-watermark",
    "crates/rdm-settings",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
tokio = { version = "1", features = ["full"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
freedesktop-desktop-entry = "0.7"
async-channel = "2"
chrono = "0.4"
dirs = "6"
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
rdm-common = { path = "crates/rdm-common" }
