[package]
name = "rdm-dock"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rdm-dock"
path = "src/main.rs"

[dependencies]
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
wayland-protocols-wlr = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
freedesktop-desktop-entry = { workspace = true }
rdm-common = { workspace = true }
