[package]
name = "rdm-launcher"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rdm-launcher"
path = "src/main.rs"

[dependencies]
gtk4 = { workspace = true }
gtk4-layer-shell = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
freedesktop-desktop-entry = { workspace = true }
rdm-common = { workspace = true }
