[package]
name = "rdm-panel"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rdm-panel"
path = "src/main.rs"

[dependencies]
qmetaobject = { workspace = true }
qttypes = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
wayland-protocols-wlr = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
freedesktop-desktop-entry = { workspace = true }
async-channel = { workspace = true }
rdm-common = { workspace = true }
