[package]
name = "rdm-session"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rdm-session"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
rdm-common = { workspace = true }
