[package]
name = "rdm-settings"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rdm-settings"
path = "src/main.rs"

[dependencies]
qmetaobject = { workspace = true }
qttypes = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rdm-common = { workspace = true }
